# huffman-compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md
huffman-compression/: CMakeLists.txt
huffman-compression/src/: all_bitsets.cpp  all_bitsets.hpp  arg.hpp  base_bitset.hpp  bit_buffer.cpp  bit_buffer.hpp  bit_util.cpp  bit_util.hpp  bitset.hpp  bitset_32.cpp  bitset_32.hpp  code_word.cpp  code_word.hpp  command_line.cpp  command_line.hpp  compression_codes_builder.hpp  compressor.cpp  compressor.hpp  config.cpp  config.hpp  decompressor.cpp  decompressor.hpp  dynamic_bitset.cpp  dynamic_bitset.hpp  flag.cpp  flag.hpp  hc.cpp  huffman_node.cpp  huffman_node.hpp  huffman_tree.cpp  huffman_tree.hpp  metadata.hpp  prefix.hpp  reader.cpp  reader.hpp  static_bitset.hpp  string_arg.cpp  string_arg.hpp  string_view_bitset.cpp  string_view_bitset.hpp  (+5 more)
test/: CMakeLists.txt
test/src/: bit_buffer.test.cpp  bit_util.test.cpp  bitset_32.test.cpp  bitset_32.test.hpp  bitset_common.test.cpp  bitset_common.test.hpp  code_word.test.cpp  command_line.test.cpp  command_line.test.hpp  compression_codes_builder.test.cpp  compressor.test.cpp  config.test.cpp  config.test.hpp  create-test  decompressor.test.cpp  decompressor.test.hpp  dummy.cpp  dynamic_bitset.test.cpp  huffman_node.test.cpp  huffman_tree.test.cpp  prefix.test.cpp  reader.test.cpp  static_bitset.test.cpp  static_bitset.test.hpp  string_arg.test.cpp  string_arg.test.hpp  string_view_bitset.test.cpp  string_view_bitset.test.hpp  tree_reconstruction.test.cpp  tree_reconstruction.test.hpp  writer.test.cpp
